Package: aroma.light
====================

Version: 1.33.3 [2014-03-30]
o Argument 'preserveScale' for normalizeTumorBoost() is now required.
  The goal with this is to in a future version migrate to use 
  preserveScale=FALSE as the default (was preserveScale=TRUE) in order 
  to avoid introducing a a global bias in the tumor allele B fraction 
  of heterozygous SNPs.  The examples use preserveScale=FALSE now.


Version: 1.33.2 [2014-03-25]
o Now plotDensity() supports weights via argument 'W'.


Version: 1.33.1 [2014-03-25]
o Now plotDensity() also supports density() objects.
o CLEANUP: robustSmoothSpline() no longer uses DUP=FALSE in
  an internal .Fortran() call.
o Bumped up package dependencies.


Version: 1.33.0 [2013-10-14]
o The version number was bumped for the Bioc devel version.


Version: 1.32.0 [2012-10-14]
o The version number was bumped for the Bioconductor release version,
  which now is Bioc v2.13 for R (>= 3.0.0).


Version: 1.31.10 [2013-10-08]
o Added averageQuantile() for matrices in addition to lists.
o SPEEDUP: Now normalizeQuantileSpline(..., sortTarget=TRUE) sorts the
  target only once for lists of vectors just as done for matrices.
o DOCUMENTATION: Merged the documentation for normalizeQuantileSpline()
  for all data types into one help page.  Same for plotXYCurve().
o BUG FIX: Argument 'lwd' of plotXYCurve(X, ...) was ignored if 'X'
  was a matrix.
o Bumped up package dependencies.


Version: 1.31.9 [2013-10-07]
o Now library(aroma.light, quietly=TRUE) attaches the package
  completely silently without any messages.
o Now the 'aroma.light' Package object is also available when the
  package is only loaded (but not attached).
o DOCUMENTATION: Merged the documentation for normalizeQuantileRank()
  for numeric vectors and lists.
o DOCUMENTATION: Now documention S3 methods under their corresponding
  generic function.


Version: 1.31.8 [2013-10-02]
o DOCUMENTATION: More generic functions are now "aliased" under