@@ -29,7 +29,7 @@
 #    by TumorBoost on SNPs that are homozygous in the matched normal.}
 #  \item{flavor}{A @character string specifying the type of
 #     correction applied.}
-#  \item{...}{Argument passed to @see "callNaiveGenotypes", if called.}
+#  \item{...}{Not used.}
 # }
 #
 # \value{
